--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					</a>
 				</div>
 				<div class="col-md-4 col-sm-6 fh5co-project>
-					<a href="#"><img src="images/cake3.jpg" alt="" class="img-responsive recentCake">
+					<a href=""><img src="images/cake3.jpg" alt="" class="img-responsive recentCake">
 					</a>
 				</div>
 
